--- a/web-developer.html
+++ b/web-developer.html
@@ -39,7 +39,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://1871.workable.com/j/438902BECE'>1871 Member Companies - Jobs: Full Stack Web Developer (PHP) - Black Spectacles - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Chicago, Illinois, United States Chicago, IL Minneapolis</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://seequent.workable.com/j/A0DA83F3D2'>Seequent - Jobs: Web Developer - Apply online</a></h5> 
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
+<h5><a href='https://uscareers-goldmansachs.icims.com/jobs/54960/front-end-web-developer---transaction-banking/job'>Careers Center Front-End Web Developer - Transaction Banking in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... infrastructure solutions, proactively guard against cyber threats, and leverage 
 machine learning alongside financial engineering to continuously turn data into?...</p>
@@ -181,7 +181,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221932-senior-web-developer'>EASYRECRUE Senior Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221932-senior-web-developer'>EASYRECRUE Senior Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -193,7 +193,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/257004-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/257004-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -205,7 +205,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/on2zafwS'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -232,7 +232,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oMf66fwX'>The Havas Group Careers - Full-Stack Web Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oMf66fwX'>The Havas Group Careers - Full-Stack Web Developer</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -394,7 +394,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bluebeam/jobs/1779462'>Job Application for Web Developer, Creative Marketing at Bluebeam, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bluebeam/jobs/1779462'>Job Application for Web Developer, Creative Marketing at Bluebeam, Inc.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
